--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -15,3 +15,8 @@ body {
     "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
     sans-serif;
 }
+
+.leaflet-container {
+  width: 100%;
+  height: 100%;
+}
